# dsplayer

./: CMakeLists.txt  README.md
dsplayer/: CMakeLists.txt
dsplayer/src/: dsplayer.pro  main.cpp  mainwindow.cpp  mainwindow.h  moc_mainwindow.cpp
libdsinterface/: CMakeLists.txt
libdsinterface/src/: ds.pb.cc  ds.pb.h  ds.proto  dsclient.cpp  dsclient.hpp  dsserver.cpp  dsserver.hpp
libdsinterface/testclient/: testclient.cpp
